SLD-3 : SLD editor webapp update

--- a/editor/src/main/webapp/index.html
+++ b/editor/src/main/webapp/index.html
@@ -18,8 +18,8 @@
         <title>GWT SLD Editor using Geomajas</title>
 
         <!-- Name defined in the module xml (=sldEditor). -->
-        <script type="text/javascript" language="javascript">var isomorphicDir = "sldEditor/sc/";</script>
-        <script type="text/javascript" language="javascript" src="sldEditor/sldEditor.nocache.js"></script>
+        <script type="text/javascript" language="javascript">var isomorphicDir = "org.geomajas.sld.editor.sldEditor/sc/";</script>
+        <script type="text/javascript" language="javascript" src="org.geomajas.sld.editor.sldEditor/org.geomajas.sld.editor.sldEditor.nocache.js"></script>
     </head>
 
     <body>
