--- a/editor/src/main/webapp/index-en.html
+++ b/editor/src/main/webapp/index-en.html
@@ -4,7 +4,7 @@
 	alt: !DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" 
 -->
 
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="nl" lang="nl">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 		<!--
 		  ~ This is part of Geomajas, a GIS framework, http://www.geomajas.org/.
 		  ~
@@ -20,7 +20,7 @@
         <meta http-equiv="content-type" content="text/html;charset=utf-8" />
         
         <!--  set the initial locale -->        
-        <meta name="gwt:property" content="locale=nl" />
+        <meta name="gwt:property" content="locale=en" />
         	<!--  Alt: -meta name="gwt:property" content="locale=en" /-->
                 
         <!-- Mimic Internet Explorer 7 -->
